<resources>
    <!--

    == Base Strings For the App ==

     -->
    <string name="app_name">DongDong</string>
    <string name="pager_title_explore">Explore</string>
    <string name="pager_title_tutor">Tutors</string>
    <string name="pager_title_notification">Notifications</string>
    <string name="pager_title_my_portfolio">Me</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="positive_button_save">Save</string>

    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>





    <!--

     == Active List Details Strings ==

      -->
    <!-- Activity Title  -->
    <string name="title_activity_question_details">Question Details</string>


    <!-- Edit List and Add Item Dialogs -->
    <string name="positive_button_add_answer">Add Answer</string>
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>





    <!--

     == Login and Create Account Strings ==

      -->
    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>


    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>

    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>


    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Log Messages -->
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>


    <!--Spinner Prompt -->
    <string name="subject_spinner">ALL SUBJECTS</string>
    <string name="level_spinner">ALL SCHOOL LEVELS</string>
    <string name="sort_spinner">MOST RECENT</string>

    <!--Subject Selection-->
    <string-array name="subject">
        <item>ALL SUBJECTS</item>
        <item>Mathematics</item>
        <item>English</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>History</item>
        <item>Economics</item>
        <item>Politics</item>
    </string-array>

    <!--Subject Selection-->
    <string-array name="school_level">
        <item>ALL SCHOOL LEVELS</item>
        <item>ELEMENTARY SCHOOL</item>
        <item>MIDDLE SCHOOL</item>
        <item>HIGH SCHOOL</item>
    </string-array>

    <!--Subject Selection-->
    <string-array name="sort_by">
        <item>MOST RECENT</item>
        <item>MOST WATCHED</item>
        <item>MOST ANSWERED</item>
    </string-array>


    <!--User Homepage String-->
    <string name="num_of_followers">Followers: %d</string>
    <string name="num_of_followings">Following: %d</string>
    <string name="num_of_thanks">%d Thanks</string>
    <string name="num_of_answers">%d Answers</string>
    <string name="num_of_watchers">%d Watchers</string>
    <string name="num_of_questions">%d Questions</string>
    <string name="num_of_points">%d Points</string>
    <string name="follow_button">FOLLOW</string>
    <string name="unfollow_button">UNFOLLOW</string>
    <string name="watching_questions">Watching Questions</string>
    <string name="saved_answers">Saved Answers</string>

    <!--Detail Answer Page String -->
    <string name="save_answer_button">Save</string>

    <!--Utils String-->
    <string name="notification_title">DongDong</string>

    <!--MeFragment String-->
    <string name="action_logout">LOG OUT</string>


</resources>