<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs646.luliu.dongdong00.ui.UserHomePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mushroom" />

        <TextView
            android:id="@+id/user_name_school_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Atuan . High School"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About:We know what we are, but know not what we may be." />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_of_followings"
            android:textColor="@color/accent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_of_followers"
            android:textColor="@color/accent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:text="@string/follow_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/see_all_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_of_answers" />

        <TextView
            android:id="@+id/see_all_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_of_questions" />

        <TextView
            android:id="@+id/num_of_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_thanks" />

    </LinearLayout>


</LinearLayout>