<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs646.luliu.dongdong00.ui.UserHomePageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mushroom"/>
        <TextView
            android:id="@+id/user_name_school_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Atuan . High School"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/user_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About:This is my description"/>
    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/dark_green"
        android:text="EDIT PROFILE"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/num_of_followings"/>
        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:text="@string/num_of_followers"/>
        <TextView
            android:id="@+id/num_of_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/num_of_thanks"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/num_of_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/num_of_answers"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/num_of_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/num_of_questions"
            android:layout_weight="1"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




    </LinearLayout>
    <Button
        android:id="@+id/watching_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Watching Questions "
        android:elevation="20dp"

        android:textSize="25dp"/>
    <Button
        android:id="@+id/saved_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Saved Answers "
        android:elevation="20dp"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:layout_margin="5dp"
        android:text="LOG OUT" />


</LinearLayout>




